--- a/react-album/src/pages/bookmark/components/Card.module.scss
+++ b/react-album/src/pages/bookmark/components/Card.module.scss
@@ -8,7 +8,7 @@
 
     border-radius: 12px;
     background-color: $color-white-000;
-    box-shadow: 0px 0px 4px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.2);
 
     &__imageBox {
         display: flex;
@@ -21,11 +21,10 @@
         border-radius: 12px 12px 0 0;
         background-color: #f6f6f6;
 
-        &__image{
+        &__image {
             width: 100%;
             height: 100%;
             border-radius: 12px 12px 0 0;
-
         }
     }
     &__infoBox {
@@ -33,17 +32,18 @@
         flex-direction: column;
 
         width: 100%;
-        height: 160px;
+        height: 168px;
 
         padding: 20px;
         gap: 4px;
 
-        &__raw {
+        &__row {
             display: flex;
             align-items: center;
             justify-content: flex-start;
 
             width: 100%;
+
             gap: 12px;
 
             .label {
@@ -54,7 +54,14 @@
                 width: 120px;
             }
             .value {
+                width: 112px;
+
                 color: $color-gray-500;
+
+                overflow: hidden;
+                white-space: nowrap;
+                text-overflow: ellipsis;
+                word-break: break-all;
             }
         }
     }
